# docs/swagger.json
@@ -50,7 +50,7 @@
                 }
             }
         },
-        "/auth/logout/{session_id}": {
+        "/auth/logout/{sessionId}": {
             "post": {
                 "description": "Logout a user with a session ID",
                 "consumes": [
@@ -67,7 +67,7 @@
                     {
                         "type": "string",
                         "description": "Session ID",
-                        "name": "session_id",
+                        "name": "sessionId",
                         "in": "path",
                         "required": true
                     }
@@ -94,7 +94,7 @@
                 }
             }
         },
-        "/auth/oauth/{provider}": {
+        "/auth/oauth": {
             "get": {
                 "description": "Initiate OAuth flow with a provider",
                 "consumes": [
@@ -112,7 +112,14 @@
                         "type": "string",
                         "description": "Provider",
                         "name": "provider",
-                        "in": "path",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "State",
+                        "name": "state",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -198,7 +205,7 @@
                 "parameters": [
                     {
                         "description": "Refresh token",
-                        "name": "refresh_token",
+                        "name": "refreshToken",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -353,7 +360,7 @@
                 }
             }
         },
-        "/clinic/abn/{abn_number}": {
+        "/clinic/abn/{abnNumber}": {
             "get": {
                 "description": "Retrieve a clinic by ABN number",
                 "consumes": [
@@ -370,7 +377,7 @@
                     {
                         "type": "string",
                         "description": "ABN number",
-                        "name": "abn_number",
+                        "name": "abnNumber",
                         "in": "path",
                         "required": true
                     }
@@ -558,7 +565,7 @@
                 }
             }
         },
-        "/users/{user_id}": {
+        "/users/{userId}": {
             "get": {
                 "description": "Get current user by user ID",
                 "consumes": [
@@ -575,7 +582,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user_id",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -617,13 +624,13 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user_id",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "description": "Update user request",
-                        "name": "update_user_request",
+                        "name": "updateUserRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -653,7 +660,7 @@
                 }
             }
         },
-        "/users/{user_id}/sessions": {
+        "/users/{userId}/sessions": {
             "get": {
                 "description": "Get active sessions by user ID",
                 "consumes": [
@@ -670,7 +677,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user_id",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -700,7 +707,7 @@
                 }
             }
         },
-        "/users/{user_id}/sessions/{session_id}": {
+        "/users/{userId}/sessions/{sessionId}": {
             "delete": {
                 "description": "Revoke a session by session ID and user ID",
                 "consumes": [
@@ -717,14 +724,14 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user_id",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "Session ID",
-                        "name": "session_id",
+                        "name": "sessionId",
                         "in": "path",
                         "required": true
                     }
@@ -756,16 +763,16 @@
         "domain.AuthResponse": {
             "type": "object",
             "properties": {
-                "access_token": {
+                "accessToken": {
                     "type": "string"
                 },
-                "expires_in": {
+                "expiresIn": {
                     "type": "integer"
                 },
-                "refresh_token": {
+                "refreshToken": {
                     "type": "string"
                 },
-                "token_type": {
+                "tokenType": {
                     "type": "string"
                 },
                 "user": {
@@ -776,7 +783,7 @@
         "domain.Clinic": {
             "type": "object",
             "properties": {
-                "abn_number": {
+                "abnNumber": {
                     "type": "string"
                 },
                 "address": {
@@ -785,10 +792,10 @@
                 "city": {
                     "type": "string"
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
-                "deleted_at": {
+                "deletedAt": {
                     "type": "string"
                 },
                 "description": {
@@ -800,10 +807,10 @@
                 "id": {
                     "type": "string"
                 },
-                "is_active": {
+                "isActive": {
                     "type": "boolean"
                 },
-                "logo_url": {
+                "logoURL": {
                     "type": "string"
                 },
                 "name": {
@@ -818,7 +825,7 @@
                 "state": {
                     "type": "string"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 },
                 "website": {
@@ -851,10 +858,10 @@
                 "email": {
                     "type": "string"
                 },
-                "first_name": {
+                "firstName": {
                     "type": "string"
                 },
-                "last_name": {
+                "lastName": {
                     "type": "string"
                 },
                 "password": {
@@ -869,28 +876,31 @@
         "domain.Session": {
             "type": "object",
             "properties": {
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
-                "expires_at": {
+                "deletedAt": {
+                    "type": "string"
+                },
+                "expiresAt": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "ip_address": {
+                "ipAddress": {
                     "type": "string"
                 },
-                "is_active": {
+                "isActive": {
                     "type": "boolean"
                 },
-                "updated_at": {
+                "updatedAt": {
                     "type": "string"
                 },
-                "user_agent": {
+                "userAgent": {
                     "type": "string"
                 },
-                "user_id": {
+                "userId": {
                     "type": "string"
                 }
             }
@@ -898,10 +908,10 @@
         "domain.UpdateUserRequest": {
             "type": "object",
             "properties": {
-                "first_name": {
+                "firstName": {
                     "type": "string"
                 },
-                "last_name": {
+                "lastName": {
                     "type": "string"
                 },
                 "phone": {
