# route/auth/auth.go
@@ -11,7 +11,7 @@ func RegisterAuthRoutes(e *gin.RouterGroup, authHandler *httpHandler.AuthHandler
 	auth.POST("/register", authHandler.Register)
 	auth.POST("/login", authHandler.Login)
 	auth.POST("/refresh", authHandler.RefreshToken)
-	auth.POST("/logout", authHandler.Logout)
+	auth.POST("/logout/:sessionId", authHandler.Logout)
 	auth.GET("/oauth/:provider", authHandler.InitiateOAuth)
 	auth.GET("/oauth/:provider/callback", authHandler.OAuthCallback)
 }
