# route/auth/user.go
@@ -8,10 +8,10 @@ import (
 func RegisterUserRoutes(e *gin.RouterGroup, userHandler *httpHandler.UserHandler) {
 	user := e.Group("/users")
 	{
-		user.GET("/:user_id", userHandler.GetCurrentUser)
-		user.PUT("/:user_id", userHandler.UpdateCurrentUser)
-		user.GET("/:user_id/sessions", userHandler.GetActiveSessions)
-		user.DELETE("/sessions/:session_id", userHandler.RevokeSession)
-		user.POST("/:user_id/sessions/revoke", userHandler.RevokeSession)
+		user.GET("/:userId", userHandler.GetCurrentUser)
+		user.PUT("/:userId", userHandler.UpdateCurrentUser)
+		user.GET("/:userId/sessions", userHandler.GetActiveSessions)
+		user.DELETE("/sessions/:sessionId", userHandler.RevokeSession)
+		user.POST("/:userId/sessions/revoke", userHandler.RevokeSession)
 	}
 }
